<resources>
    <string name="app_name">MQTT Sweeper</string>
    <string name="email_required">Enter email</string>
    <string name="password_required">Enter password</string>
    <string name="signin">LOGIN</string>
    <string name="incorrect_email">Email is invalid</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="welcome_to">MQTT Sweeper</string>
    <string name="logo_description">MQTT Sweeper Logo</string>
    <string name="title_activity_sign_up">Create Account</string>
    <string name="password_verify">Verify password</string>
    <string name="title_activity_main">Broker Dashboard</string>
    <string name="logout">Logout</string>
    <string name="title_activity_broker">Broker Details</string>
    <string name="title_activity_scan">Security Scan</string>
    <string name="sample_vuln_name">Vulnerability Name</string>
    <string name="sample_vuln_desc">Sample vulnerability description.</string>
    <string name="vuln_image_descr">Vuln severity logo</string>
    <string name="accout_details">Accout Details</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="button">Button</string>
    <string name="mqtt_host">MQTT address</string>
    <string name="connect">Connect</string>
    <string name="error_details_network_error">A network error occurred while the test was running.</string>
    <string name="error_details_not_using_encryption">This connection is communicating on the network using unencrypted protocols.</string>
    <string name="error_details_using_encryption">This connection is communicating on the network using encrypted protocols.</string>
    <string name="error_details_using_local_conn">This connection is not communicating on the network.</string>
    <string name="error_details_invalid_config">This connection does not have a valid configuration.</string>
    <string name="title_activity_scan_result">Scan Result Details</string>
    <string name="id">ID:</string>
    <string name="url">URL:</string>
    <string name="scan_results">Scan results:</string>
    <string name="topics">Topics</string>
    <string name="scan">Scan</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="broker_uri">Broker URI</string>
    <string name="broker_name">Broker Name</string>
    <string name="add">Add</string>
    <string name="title_activity_publish_topic">PublishTopic</string>
    <string name="message">message</string>
    <string name="title_activity_topiv_view_acivity">TopivViewAcivity</string>
    <string name="topicname">topicName</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="label_about_mqtt">MQTT</string>
    <string name="about_mqtt_sweeper">MQTT Sweeper</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_app_field">
        MQTT Sweeper was developed by Kevin Kredit and Brian Mbeere. It is designed to help IoT
        development and shed a little light on IoT security.
    </string>
    <string name="about_mqtt_field">
        MQTT is a lightweight pub/sub, client/broker messaging protocol. It is heavily used with
        IoT devices.
    </string>
    <string name="priv_policy_field">
        Your privacy is important to us. We collect some data in order to sync across devices.
        The only identifiable information we store is your email address.
    </string>
    <string name="kevin_github">Kevin on GitHub</string>
    <string name="brian_github">Brian on GitHub</string>
    <string name="read_more_on_wikipedia">Read more on Wikipedia</string>
    <string name="priv_policy_online">See the full policy online</string>
    <string name="about_icon">Icon</string>
    <string name="about_icon_field">
        Icon made by Freepik from www.flaticon.com.
    </string>
</resources>
