<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_vuln_name"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="18sp"
            tools:layout_conversion_absoluteHeight="22dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sample_vuln_desc"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            tools:layout_conversion_absoluteHeight="22dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="16dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/severity_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:contentDescription="@string/vuln_image_descr"
        app:srcCompat="@drawable/ic_excl_outline_black_24dp" />
</LinearLayout>
